fix: The Integer constructor is deprecated.