@@ -189,7 +189,7 @@ public abstract class AbstractDocumentSearch {
 					rsSO = pstmtSO.executeQuery();
 					Vector<Integer> idSO = new Vector<Integer>();
 					while (rsSO.next()) {
-						idSO.add(new Integer(rsSO.getInt(1)));
+						idSO.add(Integer.valueOf(rsSO.getInt(1)));
 					}
 					if (role.getWindowAccess(msd.getAD_Window_ID()) != null) {
 						log.fine("Open Window: " + msd.getAD_Window_ID() + " / Table: "
@@ -197,7 +197,7 @@ public abstract class AbstractDocumentSearch {
 
 						if (idSO.size() == 0 && (searchString == null || searchString.trim().length() == 0)) {
 							// No search string - open the window with new record
-							idSO.add(new Integer(0));
+							idSO.add(Integer.valueOf(0));
 						}
 
 						openWindow(idSO, table.getTableName(), msd.getAD_Window_ID());
@@ -210,7 +210,7 @@ public abstract class AbstractDocumentSearch {
 					rsPO = pstmtPO.executeQuery();
 					Vector<Integer> idPO = new Vector<Integer>();
 					while (rsPO.next()) {
-						idPO.add(new Integer(rsPO.getInt(1)));
+						idPO.add(Integer.valueOf(rsPO.getInt(1)));
 					}
 					if (role.getWindowAccess(msd.getPO_Window_ID()) != null) {
 						log.fine("Open Window: " + msd.getPO_Window_ID() + " / Table: "
