@@ -104,7 +104,7 @@ public class CalloutGLJournal extends CalloutEngine
 				DB.close(rs, pstmt);
 			}
 			if (C_Period_ID != 0)
-				mTab.setValue("C_Period_ID", new Integer(C_Period_ID));
+				mTab.setValue("C_Period_ID", Integer.valueOf(C_Period_ID));
 		}
 
 		//  When C_Period_ID is changed, check if in DateAcct range and set to end date if not
