@@ -91,6 +91,6 @@ public class MTree_NodeU4 extends X_AD_TreeNodeU4 {
      *    @param parentId
      */
     public void setParent_ID(int parentId) {
-        set_Value("Parent_ID", new Integer(parentId));
+        set_Value("Parent_ID", Integer.valueOf(parentId));
     }
 }
