@@ -135,7 +135,7 @@ public class MPrintFormat extends X_AD_PrintFormat
 		{
 			//	Sort Order and Column must be > 0
 			if (m_items[i].getSortNo() != 0 && m_items[i].getAD_Column_ID() != 0)
-				map.put(new Integer(m_items[i].getSortNo()), new Integer(m_items[i].getAD_Column_ID()));
+				map.put(Integer.valueOf(m_items[i].getSortNo()), Integer.valueOf(m_items[i].getAD_Column_ID()));
 		}
 		//	Get SortNo and Sort them
 		Integer[] keys = new Integer[map.keySet().size()];
@@ -162,7 +162,7 @@ public class MPrintFormat extends X_AD_PrintFormat
 		for (int i = 0; i < m_items.length; i++)
 		{
 			if (m_items[i].getAD_Column_ID() != 0 && m_items[i].isPrinted())
-				list.add(new Integer(m_items[i].getAD_Column_ID()));
+				list.add(Integer.valueOf(m_items[i].getAD_Column_ID()));
 		}
 		//	Convert
 		int[] retValue = new int[list.size()];
@@ -828,7 +828,7 @@ public class MPrintFormat extends X_AD_PrintFormat
 	 */
 	static public MPrintFormat get (Properties ctx, int AD_PrintFormat_ID, boolean readFromDisk)
 	{
-		Integer key = new Integer(AD_PrintFormat_ID);
+		Integer key = Integer.valueOf(AD_PrintFormat_ID);
 		MPrintFormat pf = null;
 		if (!readFromDisk)
 			pf = (MPrintFormat)s_formats.get(key);
@@ -895,7 +895,7 @@ public class MPrintFormat extends X_AD_PrintFormat
 	 */
 	static public void deleteFromCache (int AD_PrintFormat_ID)
 	{
-		Integer key = new Integer(AD_PrintFormat_ID);
+		Integer key = Integer.valueOf(AD_PrintFormat_ID);
 		s_formats.put(key, null);
 	}	//	deleteFromCache
 	
