@@ -547,7 +547,7 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 		Vector<Object> line = new Vector<Object>(17);
 		line.add( new Boolean(false));  //  0 Select
 		line.add( new Boolean(M_Product.isActive()));   //  1 IsActive
-		line.add( new Integer(0)); // 2 Line
+		line.add(Integer.valueOf(0)); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
 		MUOM u = new MUOM(M_Product.getCtx(), M_Product.getC_UOM_ID(), M_Product.get_TrxName());
@@ -642,7 +642,7 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 		Vector<Object> line = new Vector<Object>(17);
 		line.add( new Boolean(false));  //  0 Select
 		line.add( new Boolean(M_Product.isActive()));   //  1 IsActive
-		line.add( new Integer(0)); // 2 Line
+		line.add(Integer.valueOf(0)); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
 		MUOM u = new MUOM(M_Product.getCtx(), M_Product.getC_UOM_ID(), M_Product.get_TrxName());
@@ -701,7 +701,7 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 		Vector<Object> line = new Vector<Object>(17);
 		line.add( new Boolean(false));  //  0 Select
 		line.add( new Boolean(bomline.isActive()));   //  1 IsActive
-		line.add( new Integer(bomline.getLine())); // 2 Line
+		line.add(Integer.valueOf(bomline.getLine())); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
 		MUOM u = new MUOM(M_Product.getCtx(), M_Product.getC_UOM_ID(), M_Product.get_TrxName());
@@ -730,7 +730,7 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 		Vector<Object> line = new Vector<Object>(17);
 		line.add( new Boolean(false));  //  0 Select
 		line.add( new Boolean(M_Product.isActive()));   //  1 IsActive
-		line.add( new Integer(bom.getLine())); // 2 Line
+		line.add(Integer.valueOf(bom.getLine())); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
 		MUOM u = new MUOM(M_Product.getCtx(), M_Product.getC_UOM_ID(), M_Product.get_TrxName());
