@@ -360,7 +360,7 @@ public class WTreeBOM extends TreeBOM implements IFormController, EventListener,
 		Vector<Object> line = new Vector<Object>(17);
 		line.add( new Boolean(false));  //  0 Select
 		line.add( new Boolean(true));   //  1 IsActive
-		line.add( new Integer(bomline.getLine())); // 2 Line                
+		line.add(Integer.valueOf(bomline.getLine())); // 2 Line                
 		line.add( (Timestamp) bomline.getValidFrom()); //  3 ValidDrom
 		line.add( (Timestamp) bomline.getValidTo()); //  4 ValidTo
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getName());
@@ -397,7 +397,7 @@ public class WTreeBOM extends TreeBOM implements IFormController, EventListener,
 			Vector<Object> line = new Vector<Object>(17);
 			line.add( new Boolean(false));  //  0 Select
 			line.add( new Boolean(true));   //  1 IsActive
-			line.add( new Integer(bomline.getLine())); // 2 Line                
+			line.add(Integer.valueOf(bomline.getLine())); // 2 Line                
 			line.add( (Timestamp) bomline.getValidFrom()); //  3 ValidDrom
 			line.add( (Timestamp) bomline.getValidTo()); //  4 ValidTo
 			KeyNamePair pp = new KeyNamePair(component.getM_Product_ID(),component.getName());
