@@ -376,13 +376,13 @@ public class WorkflowProcessor extends AdempiereServer
 		
 		//	To Activity Owner
 		counter++;
-		list.add (new Integer(activity.getAD_User_ID()));
+		list.add(Integer.valueOf(activity.getAD_User_ID()));
 
 		//	To Process Owner
 		if (toProcess
 			&& process.getAD_User_ID() != activity.getAD_User_ID()) {
 			counter++;
-			list.add (new Integer(process.getAD_User_ID()));
+			list.add(Integer.valueOf(process.getAD_User_ID()));
 		}
 		
 		//	To Activity Responsible
@@ -401,9 +401,9 @@ public class WorkflowProcessor extends AdempiereServer
 		//	Processor SuperVisor
 		if (toSupervisor 
 			&& m_model.getSupervisor_ID() != 0
-			&& !list.contains(new Integer(m_model.getSupervisor_ID()))) {
+			&& !list.contains(Integer.valueOf(m_model.getSupervisor_ID()))) {
 			counter++;
-			list.add (new Integer(m_model.getSupervisor_ID()));
+			list.add(Integer.valueOf(m_model.getSupervisor_ID()));
 		}
 		Trx.run(transactionName -> {
 			DefaultNotifier notifier = getDefaultNotifierInstance(transactionName);
@@ -451,9 +451,9 @@ public class WorkflowProcessor extends AdempiereServer
 		//	Human
 		else if (MWFResponsible.RESPONSIBLETYPE_Human.equals(responsible.getResponsibleType())
 			&& responsible.getAD_User_ID() != 0
-			&& !list.contains(new Integer(responsible.getAD_User_ID()))) {
+			&& !list.contains(Integer.valueOf(responsible.getAD_User_ID()))) {
 			counter++;
-			list.add (new Integer(responsible.getAD_User_ID()));
+			list.add(Integer.valueOf(responsible.getAD_User_ID()));
 		}
 		//	Org of the Document
 		else if (MWFResponsible.RESPONSIBLETYPE_Organization.equals(responsible.getResponsibleType())) {
@@ -461,9 +461,9 @@ public class WorkflowProcessor extends AdempiereServer
 			if (document != null) {
 				MOrgInfo org = MOrgInfo.get (getCtx(), document.getAD_Org_ID(), null);
 				if (org.getSupervisor_ID() != 0
-					&& !list.contains(new Integer(org.getSupervisor_ID()))) {
+					&& !list.contains(Integer.valueOf(org.getSupervisor_ID()))) {
 					counter++;
-					list.add (new Integer(org.getSupervisor_ID()));
+					list.add(Integer.valueOf(org.getSupervisor_ID()));
 				}
 			}
 		}
@@ -477,9 +477,9 @@ public class WorkflowProcessor extends AdempiereServer
 				if (!roles.isActive())
 					continue;
 				int AD_User_ID = roles.getAD_User_ID();
-				if (!list.contains(new Integer(AD_User_ID))) {
+				if (!list.contains(Integer.valueOf(AD_User_ID))) {
 					counter++;
-					list.add (new Integer(AD_User_ID));
+					list.add(Integer.valueOf(AD_User_ID));
 				}
 			}
 		}
