@@ -252,7 +252,7 @@ public class WBrowserTable extends Listbox implements IBrowserTable, TableValueC
         //  is the column RW?
         if (column == 0 
         		|| (isSelected
-        				&& m_readWriteColumn.contains(new Integer(column)))) {
+				&& m_readWriteColumn.contains(Integer.valueOf(column)))) {
         	return true;
         }
         //	Default
@@ -343,7 +343,7 @@ public class WBrowserTable extends Listbox implements IBrowserTable, TableValueC
 	 */
 	public void setColumnReadOnly (int index, boolean readOnly)
 	{
-		Integer indexObject = new Integer(index);
+		Integer indexObject = Integer.valueOf(index);
 
 		//  Column is ReadWrite
 		if (m_readWriteColumn.contains(indexObject))
